added kable package, read through intro, table 2

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -1,6 +1,6 @@
 ---
-title             : "Objectification in Action: Self- and Other-Objectification in Same-gender Interactions"
-shorttitle        : "Objectification in Action"
+title             : "Interpersonal Objectification among Women: Evidence for the Relationship between Being Objectified and Self-Objectification in Same-Gender Interactions"
+shorttitle        : "Objectification among Women"
 
 author: 
   - name          : "Randi L. Garcia"
@@ -27,7 +27,7 @@ authornote: |
   The data that support the findings of this study are available on request from the corresponding author. The data are not publicly available due to privacy or ethical restrictions.
 
 abstract: |
-  Existing research on interpersonal objectification has focused mostly on links between objectification, self-objectification, and negative outcomes for women within mixed-gender interactions [@gervais2020social; @garcia2016objectification]. The purpose of the present study was to extend past research on interpersonal objectification to interactions between women. Women were brought into the laboratory and interacted face-to-face in same-sex dyads. Dyadic analysis [@kenny2006dyadic] was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. Results revealed a significant positive relationship between being objectified by a woman interaction partner and women’s own self-objectification (a partner effect). There was no significant relationship between self-objectification and interaction inauthenticity, but there were significant negative effects of inauthenticity on career aspirations and relationship agency (actor effects). The significant partner effect of objectification on self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and this finding opens up questions for future research about how interpersonal objectification might function in situations without an immediate male gaze.
+  Existing research on interpersonal objectification has focused mostly on links between objectification, self-objectification, and negative outcomes for women within mixed-gender interactions [@gervais2020social; @garcia2016objectification]. The purpose of the present study was to extend @garcia2016objectification's past research on mixed-gender interpersonal objectification to interactions between women. Women were brought into the laboratory and interacted face-to-face in same-sex dyads. Dyadic analysis [@kenny2006dyadic] was utilized to detect whether partners’ objectification of each other affected state self-objectification, as well as the resulting feelings of comfort and authenticity during the interaction. Results revealed a significant positive relationship between being objectified by a woman interaction partner and women’s own self-objectification (a partner effect). There was no significant relationship between self-objectification and interaction inauthenticity, but there were significant negative effects of inauthenticity on career aspirations and relationship agency (actor effects). The significant partner effect of objectification on self-objectification suggests that women being objectified by other women may result in feelings of self-objectification, and this finding opens up questions for future research about how interpersonal objectification might function in situations without an immediate male gaze.
   
 keywords          : "Interpersonal sexual objectification, self-objectifiation, authenticity, actual interactions, psychology of women, dyadic data analysis"
 
@@ -44,6 +44,9 @@ draft             : no
 documentclass     : "apa6"
 classoption       : "man"
 output            : papaja::apa6_pdf
+
+header-include:
+    - \DeclareDelayedFloatFlavor{foo}{table}
 ---
 ```{r setup, analysis-preferences}
 # Seed for random number generation
@@ -67,11 +70,12 @@ library(kutils)
 library(tidyverse)
 library(lavaan)
 library(xtable)
+library(kableExtra)
 library(rmarkdown)
 ```
-@robertsfredrickson's Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a perceived or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO focuses on understanding mixed-gender interactions, acknowledging the patriarchal power structure embedded in these mixed interactions, but can it be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
+@robertsfredrickson's Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a perceived or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. However, this research has largely focused on mixed-gender interactions only. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO focuses on understanding mixed-gender interactions, acknowledging the patriarchal power structure embedded in these mixed interactions, but can this model be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
 
-The current study uses a face-to-face interaction methodology to being to answer a series of research questions about interpersonal objectification among women: Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study addresses these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
+The current study uses the face-to-face interaction methodology deployed in @garcia2016objectification to being to answer a series of research questions about interpersonal objectification among women: Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study addresses these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
 
 ##Self-Objectification
 Self-objectification is a psychological process that translates the experiences of interpersonal objectification [@loughnan2017internalizing; @gervais2020social] into negative mental health outcomes [e.g., interaction inauthenticity, anxiety, lower self-esteem, and poor cognitive performance; @calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO), whereby one adopts a habitual third-person perspective on one's own appearance. Furthermore, self-objectification can also be elicited momentarily, for example, when viewing sexualized images in movies and magazines [@morry2001magazine], when trying on sexualizing clothing [@fredrickson1998swimsuit], or during video chat when you believe your interaction partner can only see your body [not face; @saguyetal2010]. This momentary self-objectification is referred to as *state* self-objectification [SSO; @calogero2011; @moradi2008] and is characterized by feeling like a body rather than a full self within a particular moment, instance, or context. 
@@ -86,12 +90,12 @@ Studies have shown that within social encounters women are gazed at more than me
 
 Past research has found that the experience of state self-objectification in mixed-gender contexts (stranger and romantic; @strelan2018birds; @meltzer2020women; @zurbriggen2011self) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect for women would suggest no [@saguyetal2010; @calogero2004test; @gervais2011you; @gay2010my], but, there is evidence that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men] and recent experimental evidence suggests that the female gaze causes no less self-objectification than the male gaze [@yilmaz2019whose]. It would be helpful to understand the consequences of this *intra*group objectification for women. When women objectify other women, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
-There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. Authenticity reduction and interaction quality disruptions have also been found in research on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting; @pearson2008fragility], and we might view the experience of being objectified in an interaction as a potential identity threat situation [@nadal2012effects; @gervais2020social]. Further, empirical evidence reveals that healthy relationship functioning manifests through authenticity in romantic relationships [@brunelletal2010], an intergroup context at least in heterosexual relationships. Evidence for other adverse consequences of interpersonal objectification include reductions in career aspirations [@garcia2016objectification] and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. These are also negative consequences found for women under stereotype threat [@davies2005clearing]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature and power differential of this encounter might trigger threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman. That is, the intergroup threat literature might predict that woman-woman interpersonal objectification processes diverge from mixed-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). 
+There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general [including same-sex friendships; @teran2020relational]. Authenticity reduction and interaction quality disruptions have also been found in research on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting; @pearson2008fragility], and we might view the experience of being objectified in an interaction as a potential identity threat situation [@nadal2012effects; @gervais2020social]. Further, empirical evidence reveals that healthy relationship functioning manifests through authenticity in romantic relationships [@brunelletal2010], an intergroup context at least in heterosexual relationships. Evidence for other adverse consequences of interpersonal objectification include reductions in career aspirations [@garcia2016objectification] and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. These are also negative consequences found for women under stereotype threat [@spencer1999stereotype; @davies2005clearing]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature and power differential of this encounter might trigger threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman. That is, the intergroup threat literature might predict that woman-woman interpersonal objectification processes diverge from mixed-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). 
 
 In summary, a woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting]; however, feeling like a body rather than a full human (higher SSO) in any interaction, whether intergroup or intragroup, may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; @teran2020relational].
 
 ##The Current Study
-In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the relationships for both women simultaneously. Although the literature on intragroup objectification among women is small, the results are mixed, and they do not cover interpersonal encounters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would be related to state self-objectification (SSO). We also expected that TSO would moderate this relationship, amplifying the positive association between being objectified and SSO for women higher in TSO. Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would also predict the TSO to other-objectification link, further theorizing that this relationship is mediated by the woman's own state self-objectification (SSO). Thus, the limited but extant literature on woman-woman objectification points to a possible alternative model from the model tested in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
+In the current study, we sought to examine what occurs during an interaction in which one or both partners are potentially objectifying each other and where both interaction partners identify as women. Moreover, the current study used the same face-to-face interaction paradigm as @garcia2016objectification and dyadic data analysis techniques to examine the relationships for both women simultaneously. Although the literature on intragroup objectification among women is small, the results are mixed, and they do not cover interpersonal encounters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would be related to state self-objectification (SSO). We also expected that TSO would moderate this relationship, amplifying the positive association between being objectified and SSO for women higher in TSO. Here we would like to note that @puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (more precisely, to dehumanize a sexualized woman). In addition, @strelan2005women and @harsey2020men would also predict the TSO to other-objectification link, further theorizing that this relationship is mediated by the woman's own state self-objectification (SSO). Thus, the limited but extant literature on woman-woman objectification points to a possible alternative model from the model tested in the current study. Where appropriate, we report results considering the causal directions implied by this alternative mediation model.
 
 We also tested whether SSO would, in turn, lead to feelings of inauthenticity. The investigation of the SSO to inauthenticity connection is considered exploratory given the lack of support for this connection from the literature on identity threat in *intra*group interactions but support for this connection in the objectification literature [@garcia2016objectification; @teran2020relational; @rollero2016bringing]. Regardless of whether there was an association between SSO and inauthenticity, we hypothesized that feelings of inauthencity would be associated with reduced feelings of agency in romantic relationships, reduced career aspirations, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expected to find a negative relationship between state-self objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
 
@@ -231,7 +235,7 @@ corr.table <- glrstab(corr_cswomen)
 rownames(corr.table) <- c("1. Actor's trait self objectification (TSO)", "2. Actor's objectification of partner", "3. Partner's objectification of the actor", "4. Actor's state self-objectification", "5. Actor's authenticity of interaction", "6. Actor's future relationship agency", "7. Actor's cognitive performance", "8. Actor's career aspirations")
 colnames(corr.table)   <- c("$M$", "$SD$", "1.", "2.", "3.", "4.", "5.", "6.", "7.")
 
-apa_table(corr.table, caption="Correlations and Descriptive Statistics among Study Variables", escape=FALSE)
+apa_table(corr.table, caption="Correlations and Descriptive Statistics among Study Variables", escape=FALSE, note = "* p < .05. ** p < .01.")
 ```
 
 ```{r descriptives}
@@ -399,20 +403,32 @@ rownames(meas_table) <- c("Cognitive performance",
                           
 colnames(meas_table)   <- c("Original Source", "Example Item", "Reliability Sample 1", "Reliability Sample 2")
 
-meas_table <- xtable(meas_table)
+# kable(meas_table, "latex", align = "l", booktabs = T, linesep="", caption = "A very long table", longtable=T) %>%
+#   column_spec(1, width = "5em", bold = F, italic = F) %>%
+#   kable_styling(font_size = 7) %>% 
+#   column_spec(2, width = "8em", bold = F, italic = F) %>% 
+#   kable_styling(latex_options = "repeat_header") %>%
+  
+apa_table(meas_table, caption="Measures", escape=FALSE, landscape = TRUE, font_size = "small")
 
-apa_table(meas_table, caption="Measures", escape=FALSE)
+write.csv(meas_table, "meas_table.csv") 
+
+####REproducible example from github - in here is the answer to floating kable tables.. maybe with "longtable"
+# table1 <- tibble(first=rep(letters,3),
+#                  second = rnorm(78,10,2))
+# 
+# kable(table1, "latex", align = "l", booktabs = T, linesep="", caption = "A very long table", longtable=T) %>% 
+#   column_spec(1, width = "5em", bold = F, italic = F) %>%
+#   kable_styling(font_size = 7) %>% 
+#   column_spec(2, width = "8em", bold = F, italic = F) %>% 
+#   kable_styling(latex_options = "repeat_header")
 ```
 
-The same set of measures given in @garcia2016objectification were given to participants in the current study. For more details about each of these measures please see that previous paper. To summarize, the list of measures in the order given to participants appears in Table\ \@ref(tab:measures) along side the orginal source for the scale, an example item, and the reliability in the current sample. Correlations and descriptive statistics of all study variables appear in Table\ \@ref(tab:corrtable). 
+The same set of measures given in @garcia2016objectification were given to participants in the current study. For more details about each of these measures please see that previous paper. To summarize here, the list of measures in the order given to participants appears in Table\ \@ref(tab:measures) along side the orginal source for each scale, an example item, and the reliability in the current sample. Correlations and descriptive statistics of all study variables appear in Table\ \@ref(tab:corrtable). 
 
-Cognitive performance with the Remote Associates Task's trigrams [@mcfarlin1984remote] was given first, to capture any attentional changes that may have been affected by the interaction. Next participants were given a set of measure about their thoughts and feelings during the interaction that included State-Other Objectification, Interaction Authenticity, and State Self-Objectification. Following these measures participants completed the Relationship Agency Scale and the Career Aspirations Scale. Lastly, as was the case in @garcia2016objectification, Trait Self-Objectification was given last, as not to arouse suspicious at the start of the study that we were actually focusing on objectification and to give enough time that immediate effects of the interaction would have worn off. 
+Cognitive performance with the Remote Associates Task's trigrams [@mcfarlin1984remote] was given first, to capture any immediate cognitive effects of the interaction. Next participants were given a set of measure about their thoughts and feelings during the interaction that included State-Other Objectification, Interaction Authenticity, and State Self-Objectification. Breaking from the @garcia2016objectification methodlogy, we used a three item state self-objectification scale as originally given in @saguyetal2010, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two items for our measure of SSO. Following these interaction measures participants completed the Relationship Agency Scale and the Career Aspirations Scale. Relationship agency The scale originally had 9 items, but the 9th item had low correlations with the remaining items so it was trimmed. As a result, the 8-item scale had moderately high reliability for both samples (see Table\ \@ref(tab:measures)). Lastly, as was the case in @garcia2016objectification, Trait Self-Objectification was given last, as not to arouse suspicious at the start of the study that we were actually focusing on objectification and to give enough time that immediate effects of the interaction would have worn off. 
 
 As can be seen in Table\ \@ref(tab:corrtable), the mean other-objectification of women by women was *M =* `r descriptives[3,1]` (*SD =* `r descriptives[3,2]`). This corresponds to women objectifying other women to a *greater* extent than women's objectification of men reported in @garcia2016objectification (*M =* -1.68, *SD =* 1.52). Further, in the current sample the difference in other-objectification between heterosexual (*M =* `r round(as.numeric(descsplit[2,2]),2)`, *SD =* `r round(as.numeric(descsplit[2,3]),2)`) and non-heterosexual women (*M =* `r round(as.numeric(descsplit[1,2]),2)`, *SD =* `r round(as.numeric(descsplit[1,3]),2)`) was not statistically significant, *t*(`r round(soo_diff$parameter,2)`) = `r round(soo_diff$statistic, 2)`, *p =* `r round(soo_diff$p.value,3)`. 
-
-Howbody used 3 items, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two for our measure of SSO, leaving us with a reliable scale (see Table\ \@ref(tab:measures)).
-
-Relationship agency The scale originally had 9 items, but the 9th item had low correlations with the remaining items, ranging from .02 to .30 for the first sample, and .04 to .30 for the second sample. Therefore, this item was removed. As a result, the 8-item scale had moderately high reliability for both samples (see Table\ \@ref(tab:measures)).
 
 # Results
 ```{r create_r-references, warning=FALSE, message=FALSE}
