--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,17 @@
   publisher={American Psychological Association}
 }
 
+@article{spencer1999stereotype,
+  title={Stereotype threat and women's math performance},
+  author={Spencer, Steven J and Steele, Claude M and Quinn, Diane M},
+  journal={Journal of experimental social psychology},
+  volume={35},
+  number={1},
+  pages={4--28},
+  year={1999},
+  publisher={Elsevier}
+}
+
 @article{pearson2008fragility,
   title={The fragility of intergroup relations: Divergent effects of delayed audiovisual feedback in intergroup and intragroup interaction},
   author={Pearson, Adam R and West, Tessa V and Dovidio, John F and Powers, Stacie Renfro and Buck, Ross and Henning, Robert},
