--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -426,7 +426,7 @@ write.csv(meas_table, "meas_table.csv")
 
 The same set of measures given in @garcia2016objectification were given to participants in the current study. For more details about each of these measures please see that previous paper. To summarize here, the list of measures in the order given to participants appears in Table\ \@ref(tab:measures) along side the orginal source for each scale, an example item, and the reliability in the current sample. Correlations and descriptive statistics of all study variables appear in Table\ \@ref(tab:corrtable). 
 
-Cognitive performance with the Remote Associates Task's trigrams [@mcfarlin1984remote] was given first, to capture any immediate cognitive effects of the interaction. Next participants were given a set of measure about their thoughts and feelings during the interaction that included State-Other Objectification, Interaction Authenticity, and State Self-Objectification. Breaking from the @garcia2016objectification methodlogy, we used a three item state self-objectification scale as originally given in @saguyetal2010, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two items for our measure of SSO. Following these interaction measures participants completed the Relationship Agency Scale and the Career Aspirations Scale. Relationship agency The scale originally had 9 items, but the 9th item had low correlations with the remaining items so it was trimmed. As a result, the 8-item scale had moderately high reliability for both samples (see Table\ \@ref(tab:measures)). Lastly, as was the case in @garcia2016objectification, Trait Self-Objectification was given last, as not to arouse suspicious at the start of the study that we were actually focusing on objectification and to give enough time that immediate effects of the interaction would have worn off. 
+Cognitive performance as measured with the Remote Associates Task's trigrams [@mcfarlin1984remote] was given first after the interaction to capture any immediate cognitive effects of the interaction. Next participants were given a set of self-report measures about their thoughts and feelings during the interaction that included State-Other Objectification, Interaction Authenticity, and State Self-Objectification. Breaking from the @garcia2016objectification methodlogy, we used a three item state self-objectification scale as originally given in @saguyetal2010, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two items for our measure of SSO. Following these interaction measures participants completed the Relationship Agency Scale and the Career Aspirations Scale. The Relationship agency scale originally had 9 items, but the 9th item had low correlations with the remaining items so it was trimmed. As a result, the 8-item scale had moderately high reliability for both samples (see Table\ \@ref(tab:measures)). Lastly, as was the case in @garcia2016objectification, Trait Self-Objectification was given last, as not to arouse suspicious at the start of the study that we were actually focusing on objectification and to give enough time that immediate effects of the interaction would have worn off. 
 
 As can be seen in Table\ \@ref(tab:corrtable), the mean other-objectification of women by women was *M =* `r descriptives[3,1]` (*SD =* `r descriptives[3,2]`). This corresponds to women objectifying other women to a *greater* extent than women's objectification of men reported in @garcia2016objectification (*M =* -1.68, *SD =* 1.52). Further, in the current sample the difference in other-objectification between heterosexual (*M =* `r round(as.numeric(descsplit[2,2]),2)`, *SD =* `r round(as.numeric(descsplit[2,3]),2)`) and non-heterosexual women (*M =* `r round(as.numeric(descsplit[1,2]),2)`, *SD =* `r round(as.numeric(descsplit[1,3]),2)`) was not statistically significant, *t*(`r round(soo_diff$parameter,2)`) = `r round(soo_diff$statistic, 2)`, *p =* `r round(soo_diff$p.value,3)`. 
 
@@ -449,7 +449,7 @@ This study sought to detect whether partners’ objectification of one another a
 
 While past studies investigating objectification in interactions used dyadic path analysis [@garcia2016objectification], the current study used multilevel modeling procedures. Dyadic analyses for distinguishable dyads (e.g., mixed-gender interacting pairs) is more natural using Structural Equation Modeling (SEM) than it is for indistinguishable dyads (e.g., same-gender interacting pairs), as we had in the current study [@ledermann2017analyzing; @garcia2015moderation]. One reason for this asymmetry is that, due to the arbitrary distinctions made between "partner 1" and "partner 2" in indistinguishable dyads, many estimates need to be fixed to be equal (i.e., paths, variances, covariances, endogenous intercepts, and exogenous means), but these equality constraints should not then be considered in the degrees of freedom calculations for fit estimations [@olsen2006structural]. Further, @olsen2006structural details how a new independence model and the corresponding fit measure should be re-calculated for indistinguishable dyads models. The current study used dyadic multilevel modeling (MLM) to test all relationships, moderation, and mediation patterns. The online supplementary materials found at https://github.com/kkyuchukova/object-in-action contain model estimates obtained using SEM. See @ledermann2017analyzing for a more complete discussion of the considerations for using SEM versus MLM for dyadic analysis.  
 
-Testing hypotheses and exploring relationships in the current sample of indistinguishable dyads involved using the Actor-Partner Independence Model (APIM) approach for each outcome variable. See Figure\ \@ref(fig:apim) for a basic APIM model. The APIM includes effects due to one's own, as well as one's partner's, predictor variables ($X$'s) on the one's own outcome variable ($Y$). The current study deals with indistinguishable dyads, meaning the designation of who is the "actor" and who is the "partner" is arbitrary. In total we ran five APIM's---one for each outcome variable---to test the series of the relationships proposed (i.e., for SSO, inauthenticity, career aspirations, relationship agency, and cognitive performance). 
+Testing hypotheses and exploring relationships in the current sample of indistinguishable dyads involved using the Actor-Partner Independence Model (APIM) approach for each outcome variable. See Figure\ \@ref(fig:apim) for a basic APIM model. The APIM estimates effects due to one's own, as well as one's partner's, predictor variables ($X$'s) on the one's own outcome variable ($Y$). The current study deals with indistinguishable dyads, meaning the designation of who is the "actor" and who is the "partner" is arbitrary. In total we ran five APIM's---one for each outcome variable---to test the series of the relationships proposed (i.e., for SSO, inauthenticity, career aspirations, relationship agency, and cognitive performance). 
 
 <!-- The model differences as a result of adopting this MLM approach include an examination of the partner effect of TSO on SSO, partner effect of SSO on authenticity, and partner effects of authenticity on congitive performance, relationship agency, and career aspirations.  -->
 
@@ -487,6 +487,7 @@ report_stats <- function(mod, est){
   paste(ifelse(abs(b[est]) < .01,"*b* < ","*b* = "), as.character(estround(b[est])),
         ifelse(se[est] < .01, ", *SE* < ", ", *SE* = "), as.character(estround(se[est])),
         ifelse(p[est] < .001, ", *p* < ", ", *p* = "),  as.character(pround(p[est])),
+        ", *95%CI* = [",as.character(estround(confint(mod, est)[1])), ", ", as.character(estround(confint(mod, est)[2])), "]",
         sep = "") %>%
     return()
 }
@@ -671,7 +672,7 @@ summary(apim5.c)
 
 All relationships between study variables and the MLM estimates are depicted in Figure\ \@ref(fig:semfigure). 
 
-First, use used to the APIM to test for evidence of a partner effect of other objectification and SSO in this sample of same-gender woman-woman interacting dyads. In @garcia2016objectification, men's objectification of women was significantly related to women's SSO, the current study sought to replicate this partner effect. As expected, the partner effect of other-objectification on SSO in the current all-women sample was statistically significant, `r report_stats(apim1, 3)`. That is, the extent to which one's partner reported thinking about a woman's external characteristics more than her internal characteristics was significantly related to the woman's own reported feeling more like a body than a full self. Along side the @garcia2016objectification study, there is now evidence that interpersonal objectification in an actual interpersonal encounter is related to state self-objectification for women both when the objectifyer is a man and when the objectifyer is a woman.  
+First, we used the APIM to test for evidence of a partner effect of other objectification and SSO in this sample of same-gender woman-woman interacting dyads. In @garcia2016objectification, men's objectification of women was significantly related to women's SSO, the current study sought to replicate this partner effect. As expected, the partner effect of other-objectification on SSO in the current all-women sample was statistically significant, `r report_stats(apim1, 3)`. That is, the extent to which one's partner reported thinking about a woman's external characteristics more than her internal characteristics was significantly related to the woman's own reported feeling more like a body than a full self. Along side the @garcia2016objectification study, there is now evidence that interpersonal objectification in an actual interpersonal encounter is related to state self-objectification for women both when the objectifyer is a man and when the objectifyer is a woman.  
 
 In addition to partner other-objectification, this model also included one's own objectification of their partner (actor other-objectification), actor trait self-objectification (TSO), and the interaction of partner other-objectification and TSO. One's own other objectification had no significant effect on SSO (actor effect of other-objectification), `r report_stats(apim1, 2)`. Further, inconsistent with past findings, there was no statistically significant interaction of partner's other objectification and the person's trait self-objectification on SSO, `r report_stats(apim1, 5)`. There was also no significant main effect of trait self-objectification on SSO `r report_stats(apim1.b, 4)`. The $R^2$ of this model (which includes the partner effect of other-objectification discussed in the previous paragraph) was only `r round(apim1_r2,2)`. 
 
@@ -697,9 +698,7 @@ Although the current study did not find a connection between SSO and authenticit
 ##Limitations and Future Directions
 
 ###Sample Characteristics
-In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of Western women only. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring] research on objectification [[[conducted outside of Western or Westernized countries]]] has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring, @wollast2020cultural]. [[[Since “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses”]]] [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon [[[to test the cross-cultural applicability of theoretical frameworks]]] [@loughnan2015exploring].
-
-Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014]. [[Considering the fact that the average mean age of the investigated participants of this current study was `r mean_age` years, research among younger and older individuals is needed]]], especially because the processes of self-objectification may change over time [@robertsfredrickson]. [[[It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content.]]] Further, more longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectification are needed. 
+In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of mostly women from Western cultures. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring] research on objectification that includes people from non-Western cultures has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring, @wollast2020cultural]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, but researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014]. The mean age of the current sample was `r mean_age` years, an emerging adult sample. @vangeel2018multidimensional found that self-objectification among emerging adults.... Further, more longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectification are needed, especially because the processes of self-objectification may change over time [@vangeel2018multidimensional; @robertsfredrickson]. 
 
 ###Interpersonal Sexual Objectification, Gender, and Sexual Attraction
 The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that heterosexual women are able to do this with other women as their target---and there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---perhaps they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). [[[Indeed, recent research has found that the more women self-objectify, the more they objectify other women]]] [@loughnan2015exploring; @puvia2013being], [[[although not to the degree exhibited by men; that is, men were found to objectify women significantly more than women objectify other women]]] [@strelan2005women]. This differential psychological process between women with differing sexualities might have served to dampen our ability to detect relationships.
