added emerging adulthood study

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,16 @@
   publisher={American Psychological Association}
 }
 
+@article{vangeel2018multidimensional,
+  title={The multidimensional self-objectification process from adolescence to emerging adulthood},
+  author={Vangeel, Laurens and Vandenbosch, Laura and Eggermont, Steven},
+  journal={Body image},
+  volume={26},
+  pages={60--69},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @article{spencer1999stereotype,
   title={Stereotype threat and women's math performance},
   author={Spencer, Steven J and Steele, Claude M and Quinn, Diane M},
