--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,28 @@
   publisher={American Psychological Association}
 }
 
+@article{taylor2018threat,
+  title={“A threat on the ground”: The consequences of witnessing stereotype-confirming ingroup members in interracial interactions.},
+  author={Taylor, Valerie Jones and Garcia, Randi L and Shelton, J Nicole and Yantis, Caitlyn},
+  journal={Cultural Diversity and Ethnic Minority Psychology},
+  volume={24},
+  number={3},
+  pages={319},
+  year={2018},
+  publisher={Educational Publishing Foundation}
+}
+
+@article{garcia2017racial,
+  title={Racial attitude (dis) similarity and liking in same-race minority interactions},
+  author={Garcia, Randi L and Bergsieker, Hilary B and Shelton, J Nicole},
+  journal={Group Processes \& Intergroup Relations},
+  volume={20},
+  number={4},
+  pages={501--518},
+  year={2017},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
 @article{vangeel2018multidimensional,
   title={The multidimensional self-objectification process from adolescence to emerging adulthood},
   author={Vangeel, Laurens and Vandenbosch, Laura and Eggermont, Steven},
