--- a/references.bib
+++ b/references.bib
@@ -31,6 +31,61 @@
   publisher={Educational Publishing Foundation}
 }
 
+@article{tylka2010integrating,
+  title={Integrating social comparison theory and self-esteem within objectification theory to predict women’s disordered eating},
+  author={Tylka, Tracy L and Sabik, Natalie J},
+  journal={Sex roles},
+  volume={63},
+  number={1-2},
+  pages={18--31},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{hanna2017contributions,
+  title={Contributions of social comparison and self-objectification in mediating associations between Facebook use and emergent adults' psychological well-being},
+  author={Hanna, Emily and Ward, L Monique and Seabrook, Rita C and Jerald, Morgan and Reed, Lauren and Giaccardi, Soraya and Lippman, Julia R},
+  journal={Cyberpsychology, Behavior, and Social Networking},
+  volume={20},
+  number={3},
+  pages={172--179},
+  year={2017},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
+
+@article{lindner2012social,
+  title={Social comparison and the ‘circle of objectification’},
+  author={Lindner, Danielle and Tantleff-Dunn, Stacey and Jentsch, Florian},
+  journal={Sex roles},
+  volume={67},
+  number={3-4},
+  pages={222--235},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{fox2016selective,
+  title={Selective self-presentation and social comparison through photographs on social networking sites},
+  author={Fox, Jesse and Vendemia, Megan A},
+  journal={Cyberpsychology, Behavior, and Social Networking},
+  volume={19},
+  number={10},
+  pages={593--600},
+  year={2016},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
+
+@article{feltman2018instagram,
+  title={Instagram use and self-objectification: The roles of internalization, comparison, appearance commentary, and feminism},
+  author={Feltman, Chandra E and Szymanski, Dawn M},
+  journal={Sex Roles},
+  volume={78},
+  number={5-6},
+  pages={311--324},
+  year={2018},
+  publisher={Springer}
+}
+
 @article{garcia2017racial,
   title={Racial attitude (dis) similarity and liking in same-race minority interactions},
   author={Garcia, Randi L and Bergsieker, Hilary B and Shelton, J Nicole},
