--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -687,33 +687,34 @@ Lastly, although there was no evidence that SSO was related to interaction authe
 <!-- ^[There was no direct effect of SSO on cognitive performance, `r report_stats(apim3.b, 3)`, and no direct effect of partner's other objectification on cognitive performance, `r report_stats(apim3.c, 4)`. There was no direct effect of SSO on career aspirations, `r report_stats(apim5.b, 3)`, and no direct effect of partner's other objectification on career aspirations, `r report_stats(apim5.c, 4)`. There was no direct effect of SSO on relationship agency, `r report_stats(apim4.b, 3)`, and no direct effect of partner's other objectification on relationship agency, `r report_stats(apim4.c, 4)`.] -->
 
 # Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a sample of women engaging in actual dyadic interactions with each other. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women during actual interactions is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the real or imagined male gaze that is related to women's state self-objectification, but there is now also evidence that being objectified by another woman could be related to women's SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a sample of women engaging in actual dyadic interactions with each other. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if interpersonal other-objectification by women during *actual* interactions is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the real or imagined male gaze that is related to women's state self-objectification, but there is now also evidence that being objectified by another woman could be related to women's SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-As is the case in all correlational studies, we cannot be sure about the causal direction between other-objectification and SSO. The linear model used by the current study implies that being objectified by a woman leads women to self-objectify, but it could be that women's SSO causes them to be objectified by their interaction partner. This latter interpretation is possible given the empirical evidence that it is *women's* state self-objectification that relates to being objectified by one's partner---men-identifying partners [@garcia2016objectification] and now women-identifying partners. Objectification Theory [@robertsfredrickson], as well as some past experimental studies [for example, @saguyetal2010], suggest that the causal flow is from other-objectification to SSO. Other studies, especially those investigating women objectifying other women [@puvia2013being], have found evidence that women's *trait* self-objectification is related to women objectifying (dehumanizing) other women and this link is mediated by *state* self-objectification. The process of interpersonal objectification among women could also very well contain a feedback loop. That is, perhaps we tend to objectify other women who objectify us. Then, if there tended to be reciprocity in sexual objectification among women, through a process of TSO causing SSO which in turn causes other-objectification of one's partner, which in turn causes one's partner to objectify us, and finally, being objectified further increases our own SSO. However, the current study does not provide any evidence of the TSO to other-objectification link (through SSO or directly)---TSO was not significantly correlated with SSO. Further, actor's other-objectification was not correlated with partner's other-objectification in the current sample.    
+As is the case in all correlational studies, we cannot be sure about the causal direction between other-objectification and SSO. The linear model used by the current study implies that being objectified by a woman leads women to self-objectify, but it could be that women's SSO causes them to be objectified by their interaction partner. This latter interpretation is possible given the empirical evidence that it is *women's* state self-objectification that relates to being objectified by one's partner---men-identifying partners [@garcia2016objectification] and now women-identifying partners. Objectification Theory [@robertsfredrickson], as well as some past experimental studies [for example, @saguyetal2010], suggest that the causal flow is from other-objectification to SSO. However, some studies investigating women objectifying other women [@puvia2013being], have found evidence that women's *trait* self-objectification is related to women objectifying (dehumanizing) other women and this link is mediated by *state* self-objectification. The process of interpersonal objectification among women could also very well contain a feedback loop. That is, perhaps we tend to objectify other women who are objectifying us. Then, if there indeed tends to be reciprocity in sexual objectification among women, a vicious cycle could ensue through a process of TSO causing SSO which in turn causes other-objectification of one's partner, which in turn causes one's partner to objectify us, and finally, being objectified further increases our own SSO. However, the current study does not provide any evidence of the TSO to other-objectification link (through SSO or directly)---TSO was not significantly correlated with SSO. Further, actor's other-objectification was not correlated with partner's other-objectification in the current sample. Future experimental work testing if sexual objectification by a woman can cause an increase in a woman's state self-objectification would be helpful.      
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity (and, in turn, cognitive functioning). This is somewhat surprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the research on interpersonal other-objectification and cognitive functioning [@logel2009interacting; @garcia2016objectification; @gervais2011you]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you], and perhaps the self-objectification experienced within an interaction with a women is qualitatively different, as the state self-objectification experienced within an interaction with a man. However, as a strong note of caution, it is best not to interpret a null result as evidence of no relationship and more research on interpersonal objectification among women is needed. 
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity (and, in turn, cognitive functioning). This is somewhat surprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the research on interpersonal other-objectification and cognitive functioning [@logel2009interacting; @garcia2016objectification; @gervais2011you]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you] for women, and perhaps the self-objectification experienced within an interaction with a women is qualitatively different from the state self-objectification experienced within an interaction with a man. However, as a strong note of caution, we cannot interpret a null result as evidence of no relationship and more research on interpersonal objectification among women is needed. 
 
-The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no relationship. It should be noted that the estimate of this relationship was small (close to zero), but in the negative direction. If it is the case that there is a smaller (i.e., weaker) or zero connection between women's feelings of SSO and inauthenticity in interactions with other women than in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including gender of the objectifier/interaction partner as a moderator. Inauthenticity could be added as a potential moderated mediating factor to help understand the circumstances that require other-objectification and SSO to have negative consequences for women. Perhaps one important difference is the lack of a power differential across gendered lines---the patriarchal culture is present, but the interaction partners are not a stigmatizer-stigmatized pair. This work on intragroup sexual objectification among women could also have connections to the small but growing literature investigating same-race racial minority interactions [@taylor2018threat; @garcia2017racial].    
+The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no relationship. The estimate of this relationship was small (close to zero), but in the negative direction. If perhaps it is the case that there is a smaller (i.e., weaker) or zero connection between women's feelings of SSO and inauthenticity in interactions with other women than in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including gender of the objectifier/interaction partner as a moderator. Inauthenticity could be added as a potential moderated mediating factor to help understand the circumstances that require other-objectification and SSO to have negative consequences for women. Perhaps one important difference is the lack of a power differential across gendered lines---the patriarchal culture is present, but the interaction partners are not a stigmatizer-stigmatized pair in interpersonal objectification encounters among women. Lastly, This theoretical work on intragroup sexual objectification among women could potentially benefit from making connections to the small but growing literature investigating same-race racial minority interactions [@taylor2018threat; @garcia2017racial].    
 
-Although the current study did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but was not statistically significant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational] and is related to mental health correlates [@tolman2006looking]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification], we find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
+Although the current study did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was estimated as positive (the point estimate), but was not statistically significant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational] and is related to mental health correlates [@tolman2006looking]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification], we find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current interaction partner. Although the current study did not find a connection between authenticity and SSO, this seems to us to remain a theoretically viable connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
 
 ##Limitations and Future Directions
 
 ###Sample Characteristics
-In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of mostly women from Western cultures. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring], research on objectification that includes people from non-Western cultures has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring, @wollast2020cultural]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, but researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014]. The mean age of the current sample was `r mean_age` years, a young adult sample. Further, more longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectification are needed, especially because the processes of self-objectification have been found to unfold between the periods of adolescence and young adulthood [@vangeel2018multidimensional]. 
+Although the sample size was relatively small, due to the difficulty in collecting data on actual interpersonal encounters, we believe that the results from the current analyses are important and push work in interpersonal objectification forward in an important way. Of course, more data is better, especially for evaluating null results. Follow-up studies investigating interpersonal objectification among women are necessary and should strive for larger samples. In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of mostly women from Western cultures. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring], research on objectification that includes people from non-Western cultures has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring, @wollast2020cultural]. 
 
-###Interpersonal Sexual Objectification, Gender, and Sexual Attraction
-The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that the heterosexual women in our sample were able to do this with other women as their target---indeed, there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---but, perhaps they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). These differential psychological process between heterosexual and lesbian women might have served to dampen our ability to detect the proposed relationships between study variables.
+Further, sexualizing experiences and self-objectification are thought to begin a very young age, but researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014]. The mean age of the current sample was `r mean_age` years, a young adult sample, limiting the generalizability of our results to this age group. More longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectification are recommended, especially because the processes of self-objectification have been found to unfold between the periods of adolescence and young adulthood [@vangeel2018multidimensional]. 
+
+The current sample contained a mixture of both heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that the heterosexual women in our sample were able to do this with other women as their target---indeed, there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---but, perhaps they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). Social comparison processes have been linked to self-objectification and negative body image among women in general [@tylka2010integrating, @lindner2012social] and, more recently, specifically with regard to consumption of social media site content [@hanna2017contributions, @fox2016selective, @feltman2018instagram]. However, these none of these studies compared heterosexual women to non-heterosexual women. If it is the case that there are two differential psychological processes between heterosexual and lesbian women at play, this added variance might have served to dampen our ability to detect the proposed relationships between study variables.
 
 <!-- Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [@siever1994sexual; @strong2000eating], lower body surveillance [@hill2008examining], and lower self-objectification [@noffsinger2004objectification]. However none of these studies examined the relationship between self-objectification and experiences of sexual objectification. Thus, it is unclear whether lesbian women indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Consistent with previous research, @hill2008examining determined that lesbians exhibited less physical appearance concerns compared to heterosexual women, however there was no evidence found that lesbian women self-objectify less than heterosexual women and they did not find that sexual orientation moderates the relationship between sexual objectification and self-objectification. This evidence sits in contrast to older theoretical literature that suggests that lesbians internalize cultural sexual objectification less than do heterosexual women [@brown1987lesbians; @pitman1999body; @rothblum1994lesbians; @siever1994sexual].  -->
 
-<!-- Interpersonal sexual objectification has been studied in both romantic and platonic contexts. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Evidence is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within established romantic relationships [@meltzer2020women], but less is known about first dates. An important caveat to this literature is that it is only about heterosexual relationships. Objectification might also occur among platonic friends: Perhaps women could be amplifying each others' state self-objectification *before* the theoretical encounters with men organized in the SIMO occur. In this way, women's rituals of getting ready together before socializing in co-ed groups might place even women with low TSO in a higher SSO group.  -->
+An additional issue with including both heterosexual and lesbian women in the sample is that the interpersonal encounter in the current study was experience as a potentially romantic context for some and as a strictly platonic context for others. Interpersonal sexual objectification has been studied in both romantic and platonic contexts. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Evidence is the romantic context is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within established romantic relationships [@meltzer2020women]. Less is known about first dates and there is little research on objectification processes in lesbian relationships specifically. Further, objectification might also occur among platonic friends: Perhaps women could be amplifying each others' state self-objectification *before* the theoretical encounters with men organized in the SIMO occur. 
 
-###Sexism and Sexual Discrimination
-Sexism has been found to be related to the objectification of women, but not men [@cikara2011agents; @harsey2020men], and in addition, TSO has been found to be associated with less negative attitudes towards sexual harassment [@bernard2018bodies]. Both of these effects are present for both men and women. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification of women has also been linked to trauma [@miles2015stop]. Sexual objectification occurs in a myriad of ways in women's lives and is modified by unique combinations of race, ethnicity, sexuality, age, and class [@robertsfredrickson]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result.
+<!-- ###Sexism and Sexual Discrimination -->
+<!-- Sexism has been found to be related to the objectification of women, but not men [@cikara2011agents; @harsey2020men], and in addition, TSO has been found to be associated with less negative attitudes towards sexual harassment [@bernard2018bodies]. Both of these effects are present for both men and women. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification of women has also been linked to trauma [@miles2015stop]. Sexual objectification occurs in a myriad of ways in women's lives and is modified by unique combinations of race, ethnicity, sexuality, age, and class [@robertsfredrickson]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. -->
 
 #Conclusion
-The results of this study ... and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. These results are quite useful for promoting mental health, the creation and maintenance of early action programs for girls and young women, and for scholars and practitioners to work intentionally to provide the tools necessary to circumvent or mitigate negative effects on self-objectification to combat such experiences.
+To the best of our knowledge, this was the first study to test the relationship between objectification and self-objectification within actual interpersonal interactions among women. The results of this study replicated the partner effect of other-objectification on state self-objectification found in @garcia2016objectification in a sample of same-gender pairs all identifying as women. That is, the more a woman's female interaction partner reported having objectified her, the more she reported a state of self-objectification during the interaction. Unlike past research finding that trait self-objectification moderated this relationship, we did not find any evidence of such an effect. Further, we did not find that inauthenticity was an important mediating factor between self-objectification and the negative psychological and social consequences of such objectification for women’s, as was the case in past studies on interpersonal objectification of women by men. Further research should be conducted with larger samples that investigate interpersonal objecticiation among women and compare these processes to parallel processes among mixed-gender dyads. 
 
 \newpage
 
